Working basic app in jdk 15 with enable preview features.

--- a/micronaut-cli.yml
+++ b/micronaut-cli.yml
@@ -1,6 +1,6 @@
 applicationType: default
-defaultPackage: com.sggw
+defaultPackage: dnaadmin
 testFramework: junit
-sourceLanguage: kotlin
-buildTool: gradle_kotlin
-features: [annotation-api, app-name, flyway, gradle, h2, hibernate-validator, http-client, jdbc-hikari, junit, kotlin, kotlin-application, kotlin-extension-functions, logback, netty-server, openapi, readme, shade, yaml]
+sourceLanguage: java
+buildTool: gradle
+features: [annotation-api, app-name, data, data-jdbc, flyway, gradle, h2, http-client, java, java-application, jdbc-hikari, junit, logback, netty-server, openapi, readme, shade, yaml]
