--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,16 +20,10 @@ datasource:
     url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     driverClassName: org.h2.Driver
     username: sa
-    password:
+    password: ''
+    dialect: H2
   heroku:
     url: ${JDBC_DATABASE_URL}
     driverClassName: org.postgresql.Driver
     username: ${JDBC_DATABASE_USERNAME}
     password: ${JDBC_DATABASE_PASSWORD}
-
-
-
-
-
-
-
