--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 version = "0.1"
-group = "dnaadmin"
+group = "com.sggw"
 
 repositories {
     mavenCentral()
@@ -16,7 +16,7 @@ micronaut {
     testRuntime("junit5")
     processing {
         incremental(true)
-        annotations("dnaadmin.*")
+        annotations("org.sggw.dnaadmin.*")
     }
 }
 
@@ -38,7 +38,7 @@ dependencies {
 
 
 application {
-    mainClass.set("dnaadmin.Application")
+    mainClass.set("org.sggw.dnaadmin.Application")
 }
 
 java {
