Working integration of frontend into build pipeline. Added enviroments and flyway.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,44 @@
-Thumbs.db
-.DS_Store
-.gradle
-build/
+#Maven
 target/
-out/
-.idea
-*.iml
-*.ipr
-*.iws
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
+
+#Gradle
+.gradle
+/build/
+
+
+# Eclipse
 .project
-.settings
 .classpath
+.settings/
+bin/
+
+# IntelliJ
+.idea
+*.ipr
+*.iml
+*.iws
+
+# NetBeans
+nb-configuration.xml
+
+# Visual Studio Code
+.vscode
 .factorypath
+
+# OSX
+.DS_Store
+
+# Vim
+*.swp
+*.swo
+
+# patch
+*.orig
+*.rej
+
+# node
+frontend/node
